[package]
name = "rust-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.44.0", features = ["full"] }
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs"] }

[dev-dependencies]
mockall = "0.13.1"
testcontainers = "0.23.3"
wiremock = "0.6.3"
axum-test = "17.2.0"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true  # Enable link time optimization
codegen-units = 1  # Reduce parallel code generation units
